# optics-toolkit

./: .gitignore  LICENSE  pyproject.toml
optics-toolkit/: FourierTransforms.py
optics_toolkit/: Anisotropy.py  Dispersion.py  FieldContainers.py  FieldGenerator.py  FourierTransforms.py  Materials.py  Miscellanea.py  TransmissionFunctions.py
src/optics-toolkit/: Constants.py  Detectors.py  Dispersion.py  Materials.py  Miscellanea.py  TransmissionFunctions.py  __init__.py
